<resources>
    <string name="app_name">SpringCar</string>

    <string name="home_promo">Don\'t dream it,\n drive it !</string>
    <string name="per_day_label">per day</string>
    <string name="select_office_label">Select Office</string>
    <string name="pickup_date_label">Pick Up Date</string>
    <string name="dropoff_date_label">Drop Off Date</string>
    <string name="pickup_date_hint">dd-MM-yyyy</string>
    <string name="office_selected">Office:</string>

    <!-- Navigation Buttons Texts -->
    <string name="next_btn">Next</string>
    <string name="confirm_btn">Confirm</string>
    <string name="delete_btn">Delete</string>
    <string name="back_btn">Back</string>
    <string name="edit_btn">Edit</string>
    <string name="home_btn">Home</string>

    <!-- Strings de las opciones de seguros -->
    <string name="base_insurance_text">Basic third party insurance</string>
    <string name="top_insurance_text">All risk covering insurance</string>
    <string name="tire_glass_text">Tire and glass protection</string>

    <!-- Strings de las opciones de extras comunes -->
    <string name="extra_0">Baby seat (0 - 13kg)</string>
    <string name="extra_0_price">11.99 €</string>
    <string name="extra_1">Child seat (9 - 36kg)</string>
    <string name="extra_1_price">11.99 €</string>
    <string name="extra_2">Booster seat (15 - 36kg)</string>
    <string name="extra_2_price">9.99 €</string>
    <string name="extra_3">Snow chains</string>
    <string name="extra_3_price">18.33 €</string>
    <string name="extra_4">Sky &amp; Snowboard rack</string>
    <string name="extra_4_price">18.33 €</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Confirmation Text -->
    <string name="confirmation_text">Please read carefully your order details before confirm your reservation</string>
    <string name="reservation_intro_text">Reservation number: </string>

</resources>
